[gd_scene load_steps=10 format=3 uid="uid://bci720gpllgkg"]

[ext_resource type="Texture2D" uid="uid://10de5k3m1dg2" path="res://ui/pc/ChatGPT Image 8 ao√ªt 2025, 22_25_59.png" id="1_mw55y"]
[ext_resource type="Script" uid="uid://bcguts3ag7me7" path="res://ui/pc/pc_ui.gd" id="1_pvpqv"]
[ext_resource type="FontFile" uid="uid://bsvquo20ksgd2" path="res://others/fonts/Minecraft.ttf" id="3_im68u"]
[ext_resource type="FontFile" uid="uid://dq1mbflug1buk" path="res://others/fonts/acknowtt.ttf" id="3_t8jgk"]
[ext_resource type="AudioStream" uid="uid://ce0enu7r2xdcd" path="res://sounds/spacebar-click-keyboard-199448.mp3" id="4_vrpgt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_im68u"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mw55y"]
bg_color = Color(0.831373, 0.815686, 0.784314, 1)

[sub_resource type="Theme" id="Theme_pvpqv"]
Button/styles/focus = SubResource("StyleBoxFlat_mw55y")
Button/styles/hover = SubResource("StyleBoxFlat_mw55y")
Button/styles/normal = SubResource("StyleBoxFlat_mw55y")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_guncd"]
bg_color = Color(0.917647, 0.898039, 0.858824, 1)

[node name="pc_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pvpqv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.215686, 0.396078, 0.619608, 1)

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 228.0
offset_top = 11.0
offset_right = -215.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_mw55y")
expand_mode = 1

[node name="codeInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 458.0
offset_top = 339.0
offset_right = 811.0
offset_bottom = 366.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_im68u")
theme_override_styles/normal = SubResource("StyleBoxFlat_im68u")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 463.0
offset_top = 417.0
offset_right = 580.0
offset_bottom = 453.0
theme = SubResource("Theme_pvpqv")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_t8jgk")
theme_override_font_sizes/font_size = 32
text = "ok
"

[node name="btn_exit" type="Button" parent="."]
layout_mode = 0
offset_left = 831.0
offset_top = 150.0
offset_right = 856.0
offset_bottom = 171.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_guncd")
text = "X
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vrpgt")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="btn_exit" to="." method="_on_btn_exit_pressed"]
